# c-builder

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compile_commands.json
assets/shaders/: default.vert.glsl  default_frag.glsl  default_vert.glsl  simple.frag  simple.vert
cbased/: CMakeLists.txt
cbased/src/: cbased.h
cbased/src/cbased/core/: array.h  base.h  list.h  log.c  log.h  math.h  matrix.h  memory.c  memory.h  quaternion.h  string.h  transform.c  transform.h  uuid.c  uuid.h  vector.h
cbased/src/cbased/database/: postgresql.c  postgresql.h
cbased/src/cbased/db/: postgresql.c  postgresql.h
cbased/src/cbased/gfx/: camera.c  camera.h  gfx.c  gfx.h  opengl.c  opengl.h  vulkan.c  vulkan.h
cbased/src/cbased/gfx/backend/: gl.c  gl.h  vk.c  vk.h
cbased/src/cbased/net/: net.c  net.h
cbased/src/cbased/os/: os.c  os.h
sandbox/: sandbox.c
src/: base.h  core.h
src/base/: defines.h  log.c  log.h  math.h  matrix.h  quaternion.h  string.h  transform.c  transform.h  uuid.h  vector.h
src/core/: base.h  container.h  gfx.h  intrinsics.h  log.c  memory.h  os.h  uuid.c  vector.h
src/core/base/: defines.h  log.h  matrix.h  memory.h  string.h  transform.h  uuid.h  vector.h
src/core/container/: array.h  list.h
src/core/container/intrusive/list/: intrusive_list.h
src/core/gfx/: gfx.c  gfx.h  opengl.h  vulkan.h
src/core/os/: os.c  os.h
src/gfx/: gfx.c  gfx.h  opengl.c  opengl.h  vulkan.c  vulkan.h
src/os/: os.c  os.h
src/platform/: platform.c  platform.h
src/renderer/: renderer.c  renderer.h  vulkan.c  vulkan.h
tests/: CMakeLists.txt  test_array.c  test_db_pg.c  test_db_pq.c  test_gfx.c  test_intrusive.c  test_list.c  test_memory.c  test_net.c  test_net_client.c  test_net_server.c  test_opengl.c  test_os.c  test_unity.c  test_vulkan.c  vulkan.c
